--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,9 +1,11 @@
 .container {
   padding: 0 31px;
-  .footer {
+
+  .footer & {
     @extend %flex-align;
   }
 }
+
 @media screen and (min-width: 480px) {
   .container {
     width: 480px;
