--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,1027 @@
-/* No CSS *//*# sourceMappingURL=main.css.map */
+.visually-hidden {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px);
+  /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
+  overflow: hidden;
+}
+
+.footer .container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
+  font-style: normal;
+}
+
+img {
+  display: block;
+}
+
+.section {
+  padding-top: 84px;
+  padding-bottom: 84px;
+}
+
+.list {
+  list-style: none;
+}
+
+.link {
+  text-decoration: none;
+}
+
+.address {
+  font-style: normal;
+}
+
+@media screen and (min-width: 768px) {
+  .section {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 130px;
+    padding-bottom: 130px;
+  }
+}
+
+.container {
+  padding: 0 31px;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+    margin: 0 auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+    padding: 0 39px;
+  }
+  .hero .container,
+  .about .container {
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+    padding: 0 15px;
+  }
+  .header .container {
+    display: flex;
+    align-items: center;
+  }
+  .achievements .container {
+    display: flex;
+  }
+}
+
+.modal-btn {
+  font-family: "Open Sans", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.333;
+  letter-spacing: 0.09em;
+  text-transform: uppercase;
+  color: #ffffff;
+  padding: 12px;
+  margin-right: 55px;
+  min-width: 160px;
+  height: 40px;
+  border: 1px solid #ff6c00;
+  border-radius: 25px;
+  background-color: transparent;
+  cursor: pointer;
+  transition: all 250ms linear;
+}
+
+.modal-btn_light-theme {
+  color: #303030;
+}
+
+.modal-btn:hover, .modal-btn:focus {
+  background-color: #ff6c00;
+  color: #fff;
+}
+
+.services .modal-btn {
+  display: block;
+  margin: 0 auto;
+}
+
+.social-links {
+  display: flex;
+  align-items: center;
+}
+
+.social-links::before {
+  display: inline-block;
+  content: '';
+  width: 60px;
+  height: 1px;
+  background-color: #303030;
+  flex-shrink: 0;
+  margin-right: 40px;
+}
+
+.social-links__element:not(:last-child) {
+  margin-right: 40px;
+}
+
+.social-link {
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.364;
+  letter-spacing: 0.2em;
+  color: #303030;
+  transition: color 250ms linear;
+}
+
+.social-link:hover, .social-link:focus {
+  color: #ff6c00;
+}
+
+@media screen and (min-width: 768px) {
+  .hero__left-side .social-links {
+    transform: rotate(-90deg);
+    transform-origin: left top;
+  }
+}
+
+.subtitle {
+  display: flex;
+  align-items: center;
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.364;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+.subtitle::before {
+  display: inline-block;
+  content: '';
+  width: 60px;
+  height: 1px;
+  background-color: #303030;
+  margin-right: 20px;
+}
+
+.subtitle-dark-theme {
+  color: rgba(157, 164, 189, 0.6);
+}
+
+.subtitle-dark-theme::before {
+  background-color: rgba(157, 164, 189, 0.6);
+}
+
+.subtitle-light-theme {
+  color: #303030;
+}
+
+.subtitle-light-theme::before {
+  background-color: #303030;
+}
+
+.gallery .subtitle {
+  margin-bottom: 44px;
+}
+
+.title {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 1.17857;
+  letter-spacing: 0.05em;
+}
+
+.title-dark-theme {
+  color: #ffffff;
+}
+
+.title-light-theme {
+  color: #303030;
+}
+
+.about .title,
+.achievements .title {
+  margin-bottom: 20px;
+}
+
+.services .title,
+.masters .title,
+.contact__wrapper .title {
+  margin-bottom: 44px;
+}
+
+@media screen and (min-width: 1200px) {
+  .title {
+    font-weight: 700;
+    font-size: 42px;
+    line-height: 1.16667;
+  }
+}
+
+.description {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.625;
+  letter-spacing: 0.02em;
+}
+
+.description-dark-theme {
+  color: #9da4bd;
+}
+
+.description-light-theme {
+  color: #555555;
+}
+
+.hero .description {
+  max-width: 290px;
+}
+
+.about .description {
+  margin-bottom: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .hero .description {
+    max-width: 360px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .description {
+    font-size: 18px;
+    line-height: 1.667;
+  }
+  .hero .description {
+    max-width: 400px;
+  }
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  transition: all 500ms linear;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: all 500ms linear 500ms;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  width: 528px;
+  height: 581px;
+  background-color: #fff;
+  transition: all 500ms linear 500ms;
+  padding: 40px;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0);
+  transition: all 500ms linear 0ms;
+}
+
+.close-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  background-color: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.modal-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-form__field {
+  margin-bottom: 40px;
+}
+
+.modal-form__field-wrapper {
+  display: block;
+  position: relative;
+  margin-top: 10px;
+}
+
+.modal-form__input:focus, .modal-form__message:focus {
+  outline: none;
+  border: 1px solid blue;
+}
+
+.modal-form__input {
+  display: block;
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding-left: 42px;
+}
+
+.modal-form__message {
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  resize: none;
+  margin-bottom: 40px;
+}
+
+.modal-form__svg-icon {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+}
+
+.modal-form__input:focus + .modal-form__svg-icon {
+  fill: blue;
+}
+
+.modal-form__policy-label::before {
+  display: inline-block;
+  content: '';
+  width: 16px;
+  height: 16px;
+  outline: 1px solid #000;
+  margin-right: 8px;
+}
+
+.modal-form__policy-label::before:hover {
+  outline: 1px solid blue;
+}
+
+.modal-form__policy:checked + .modal-form__policy-label::before {
+  border: 4px solid #fff;
+  background-color: #ff6c00;
+}
+
+.modal-form__btn {
+  font-family: "Open Sans", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.333;
+  letter-spacing: 0.09em;
+  text-transform: uppercase;
+  color: #ffffff;
+  padding: 12px;
+  min-width: 160px;
+  height: 40px;
+  border: 1px solid #ff6c00;
+  border-radius: 25px;
+  background-color: transparent;
+  cursor: pointer;
+  transition: all 250ms linear;
+  align-self: flex-start;
+  color: #555555;
+}
+
+.modal-form__btn:hover, .modal-form__btn:focus {
+  background-color: #ff6c00;
+  color: #fff;
+}
+
+.social__list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.social__list-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: #fff;
+  transition: background-color 250ms linear;
+}
+
+.social__list-link:hover, .social__list-link:focus {
+  background-color: #000;
+  cursor: pointer;
+}
+
+.social__list-svg {
+  width: 20px;
+  height: 20px;
+  transition: fill 250ms linear;
+}
+
+.social__list-link:hover .social__list-svg,
+.social__list-link:focus .social__list-svg {
+  fill: #ff6c00;
+}
+
+.header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 32px 0;
+}
+
+.header .address {
+  margin-left: auto;
+  margin-right: 40px;
+}
+
+.header__logo {
+  margin-right: 70px;
+}
+
+.logo {
+  animation-duration: 1000ms;
+  animation-iteration-count: 4;
+}
+
+.navigation {
+  display: flex;
+  align-items: center;
+}
+
+.navigation__list {
+  display: flex;
+}
+
+.navigation__list-element:not(:last-child) {
+  margin-right: 40px;
+}
+
+.navigation__list-link {
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.333;
+  letter-spacing: 0.1em;
+  color: #fff;
+  transition: color 250ms linear;
+}
+
+.navigation__list-link:hover, .navigation__list-link:focus {
+  color: #ff6c00;
+}
+
+.tel-link {
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.333;
+  letter-spacing: 0.1em;
+  color: #fff;
+  transition: color 250ms linear;
+}
+
+.tel-link:hover, .tel-link:focus {
+  color: #ff6c00;
+}
+
+.hero__title {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 1.167;
+  letter-spacing: 0.05em;
+  margin-bottom: 20px;
+  color: #fff;
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (max-width: 767px), screen and (min-resolution: 192dpi) and (max-width: 767px), screen and (min-resolution: 2dppx) and (max-width: 767px) {
+  .hero {
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url("../images/hero/bg-mobile@2x.jpg");
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .hero {
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url("../images/hero/bg-mobile.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-top: 208px;
+    padding-bottom: 182px;
+  }
+  .hero-left-side {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero__left-side {
+    width: 120px;
+    display: flex;
+    align-items: flex-end;
+    padding-left: 36px;
+    padding-bottom: 40px;
+  }
+  .hero__right-side {
+    flex-grow: 1;
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url("../images/hero/bg-tablet.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-top: 272px;
+    padding-bottom: 244px;
+    padding-left: 120px;
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px), screen and (min-resolution: 192dpi) and (min-width: 768px), screen and (min-resolution: 2dppx) and (min-width: 768px) {
+  .hero__right-side {
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url("../images/hero/bg-tablet@2x.jpg");
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero__left-side {
+    width: 100px;
+    padding-left: 26px;
+    padding-bottom: 40px;
+  }
+  .hero__right-side {
+    padding-left: 100px;
+    padding-bottom: 206px;
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url("../images/hero/bg-desktop.jpg");
+  }
+  .hero__title {
+    font-size: 72px;
+    line-height: 1.181;
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px), screen and (min-resolution: 192dpi) and (min-width: 1200px), screen and (min-resolution: 2dppx) and (min-width: 1200px) {
+  .hero__right-side {
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url("../images/hero/bg-desktop@2x.jpg");
+  }
+}
+
+.about__text {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.857;
+  letter-spacing: 0.02em;
+  color: #555555;
+  margin-bottom: 40px;
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .about__left-side {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .about__right-side {
+    padding-left: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .about__list-element:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .about__right-side {
+    padding-left: 64px;
+  }
+  .about__list {
+    display: flex;
+  }
+  .about__list-element:not(:last-child) {
+    margin-right: 30px;
+  }
+  .about__text {
+    padding-right: 56px;
+  }
+}
+
+.services {
+  background-color: #111319;
+  background-image: url("../images/services/bg.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.services__list {
+  width: 50%;
+  padding: 30px 40px;
+  background-image: linear-gradient(180deg, #171a24 0%, rgba(23, 26, 36, 0.2) 100%);
+}
+
+.services__list:nth-child(4n-1), .services__list:nth-child(4n-2) {
+  background-image: linear-gradient(180deg, #090b13 0%, rgba(9, 11, 19, 0.2) 100%);
+}
+
+.services__list-element {
+  display: flex;
+  justify-content: space-between;
+}
+
+.services__list-element:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.services__list-name, .services__list-price {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.667;
+  letter-spacing: 0.02em;
+  color: #9da4bd;
+}
+
+.services__list-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 50px;
+}
+
+.achievements-left-side {
+  padding-left: 100px;
+}
+
+.achievements__right-side {
+  padding-left: 130px;
+}
+
+.achievements__list {
+  display: flex;
+  flex-wrap: wrap;
+  width: 370px;
+}
+
+.achievements__list-element {
+  width: 170px;
+  height: 133px;
+  background: #f7f7f7;
+  padding: 20px 21px;
+}
+
+.achievements__list-element:not(:nth-child(even)) {
+  margin-right: 30px;
+}
+
+.achievements__list-element:nth-child(even) {
+  margin-top: 30px;
+}
+
+.achievements__list-count {
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 1.357;
+  text-align: center;
+  letter-spacing: 0.05em;
+  color: #303030;
+}
+
+.achievements__list-description {
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.364;
+  text-align: center;
+  color: #303030;
+}
+
+.masters {
+  background-color: #f7f7f7;
+}
+
+.masters__list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.masters__list-content {
+  padding-top: 30px;
+  padding-left: 82px;
+  padding-right: 82px;
+}
+
+.masters__list-name {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.389;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #303030;
+  margin-bottom: 8px;
+}
+
+.masters__list-position {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.357;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #ff6c00;
+  margin-bottom: 30px;
+}
+
+.gallery__list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.contact-form__section {
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 25px;
+}
+
+.contact-form {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: space-between;
+  width: 560px;
+}
+
+.contact-form__input, .contact-form__message {
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.364;
+  letter-spacing: 0.1em;
+  color: #ffffff;
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid #9da4bd;
+}
+
+.contact-form__input::placeholder, .contact-form__message::placeholder {
+  text-transform: uppercase;
+}
+
+.contact-form__input:focus, .contact-form__message:focus {
+  outline: none;
+  border-bottom: 1px solid #ffffff;
+}
+
+.contact-form__input:focus::placeholder, .contact-form__message:focus::placeholder {
+  color: #ffffff;
+}
+
+.contact-form__input {
+  width: 270px;
+  height: 24px;
+  margin-bottom: 44px;
+}
+
+.contact-form__message {
+  width: 100%;
+  height: 76px;
+  resize: none;
+  margin-bottom: 44px;
+}
+
+.contact-form__btn {
+  font-family: "Open Sans", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.333;
+  letter-spacing: 0.09em;
+  text-transform: uppercase;
+  color: #ffffff;
+  padding: 12px;
+  min-width: 160px;
+  height: 40px;
+  border: 1px solid #ff6c00;
+  border-radius: 25px;
+  background-color: transparent;
+  cursor: pointer;
+  transition: all 250ms linear;
+}
+
+.contact-form__btn:hover, .contact-form__btn:focus {
+  background-color: #ff6c00;
+  color: #fff;
+}
+
+.contact__information {
+  padding-left: 115px;
+  background-image: url("../images/contact/bg.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.contact__information .address {
+  margin-bottom: 70px;
+}
+
+.contact__list-element {
+  display: flex;
+  align-items: center;
+}
+
+.contact__list-element:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.contact__list-element-svg {
+  width: 24px;
+  height: 24px;
+  margin-right: 16px;
+}
+
+.contact__list-element:first-child .contact__list-element-svg {
+  align-self: flex-start;
+  margin-top: 6px;
+}
+
+.contact__list-link:hover, .contact__list-link:focus {
+  opacity: 0.5;
+}
+
+.contact__list-link, .contact__date {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.667;
+  letter-spacing: 0.02em;
+  color: #9da4bd;
+  transition: opacity 500ms linear;
+}
+
+.contact__wrapper {
+  display: flex;
+  background-color: #191c26;
+}
+
+.contact-form__section,
+.contact__information {
+  width: 50%;
+  padding-top: 130px;
+  padding-bottom: 130px;
+}
+
+.contact-form__section {
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 25px;
+}
+
+.contact-form {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: space-between;
+  width: 560px;
+}
+
+.contact-form__input, .contact-form__message {
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.364;
+  letter-spacing: 0.1em;
+  color: #ffffff;
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid #9da4bd;
+}
+
+.contact-form__input::placeholder, .contact-form__message::placeholder {
+  text-transform: uppercase;
+}
+
+.contact-form__input:focus, .contact-form__message:focus {
+  outline: none;
+  border-bottom: 1px solid #ffffff;
+}
+
+.contact-form__input:focus::placeholder, .contact-form__message:focus::placeholder {
+  color: #ffffff;
+}
+
+.contact-form__input {
+  width: 270px;
+  height: 24px;
+  margin-bottom: 44px;
+}
+
+.contact-form__message {
+  width: 100%;
+  height: 76px;
+  resize: none;
+  margin-bottom: 44px;
+}
+
+.contact-form__btn {
+  font-family: "Open Sans", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.333;
+  letter-spacing: 0.09em;
+  text-transform: uppercase;
+  color: #ffffff;
+  padding: 12px;
+  min-width: 160px;
+  height: 40px;
+  border: 1px solid #ff6c00;
+  border-radius: 25px;
+  background-color: transparent;
+  cursor: pointer;
+  transition: all 250ms linear;
+}
+
+.contact-form__btn:hover, .contact-form__btn:focus {
+  background-color: #ff6c00;
+  color: #fff;
+}
+
+.contact__information {
+  padding-left: 115px;
+  background-image: url("../images/contact/bg.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.contact__information .address {
+  margin-bottom: 70px;
+}
+
+.contact__list-element {
+  display: flex;
+  align-items: center;
+}
+
+.contact__list-element:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.contact__list-element-svg {
+  width: 24px;
+  height: 24px;
+  margin-right: 16px;
+}
+
+.contact__list-element:first-child .contact__list-element-svg {
+  align-self: flex-start;
+  margin-top: 6px;
+}
+
+.contact__list-link:hover, .contact__list-link:focus {
+  opacity: 0.5;
+}
+
+.contact__list-link, .contact__date {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.667;
+  letter-spacing: 0.02em;
+  color: #9da4bd;
+  transition: opacity 500ms linear;
+}
+
+.footer {
+  padding-top: 56px;
+  padding-bottom: 56px;
+}
+
+.copyright {
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.364;
+  letter-spacing: 0.2em;
+  color: #9da4bd;
+}
+/*# sourceMappingURL=main.css.map */
