--- a/css/main.css
+++ b/css/main.css
@@ -332,6 +332,11 @@ img {
   cursor: pointer;
 }
 
+.close-btn:hover, .close-btn:focus {
+  font-weight: 700;
+  border: 3px solid rgba(0, 0, 0, 0.1);
+}
+
 .modal-form {
   display: flex;
   flex-direction: column;
@@ -367,6 +372,7 @@ img {
   border-radius: 4px;
   resize: none;
   margin-bottom: 40px;
+  padding: 10px;
 }
 
 .modal-form__svg-icon {
@@ -408,6 +414,7 @@ img {
   text-transform: uppercase;
   color: #ffffff;
   padding: 12px;
+  margin: 35px auto 0px;
   min-width: 160px;
   height: 40px;
   border: 1px solid #ff6c00;
